fix: adjust z-index

--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,7 @@ body {
     top: 500px;
     background-color: white;
     border-radius: 5px 10px 5px 10px;
+    z-index: 8;
   }
 }
 
